Script_JS_page_index

--- a/index.html
+++ b/index.html
@@ -104,6 +104,11 @@
 
       <!--Scipt JS-->
       <script src="script.js"></script>
+      <script>
+        teddies();
+      </script>
+      
+      
       <!--Script FontAwesome-->
       <script src="https://kit.fontawesome.com/ffb09557c8.js" crossorigin="anonymous"></script>
     </div>
