--- a/panier-orinounours.html
+++ b/panier-orinounours.html
@@ -145,6 +145,7 @@
      
       <!--Scipt JS-->
       <script src="script.js"></script>
+      <script src="panier.js"></script>
       <!--Script FontAwesome-->
       <script src="https://kit.fontawesome.com/ffb09557c8.js" crossorigin="anonymous"></script>
     </div>
