--- a/produit.html
+++ b/produit.html
@@ -80,7 +80,7 @@
         </section>
           <div class="button_panier">
               <div>
-                <a href="panier-orinounours.html" id="ajout_panier">Ajouter au Panier</a>
+                <button id="ajout_panier">Ajouter au Panier</button> 
               </div>
           </div>
       </main>
