--- a/confirmation-orinounours.html
+++ b/confirmation-orinounours.html
@@ -119,6 +119,9 @@
       
       <!--Scipt JS-->
       <script src="script.js"></script>
+      <script src='panier.js'></script>
+      <script src ='recap.js'></script>
+      <script src='order.js'></script>
       <!--Script FontAwesome-->
       <script src="https://kit.fontawesome.com/ffb09557c8.js" crossorigin="anonymous"></script>
     </div>
