--- a/panier-orinounours.html
+++ b/panier-orinounours.html
@@ -83,7 +83,7 @@
         <section class="formulaire_commande">
           <h2>Validez votre commande</h2>
           <div class="cadre">
-            <form method="post" name="formContact" id="form_1" action="traitement.php">
+            <form method="post" name="formContact" id="form_1" >
               <div class="form-group">
                 <label for="nom"> Nom de famille </label>
                 <input type="text" id="nom" name="nom" class="form-control" placeholder="Ex : Dupont"required autofocus/></p>
@@ -117,7 +117,7 @@
                 </div>
               </div>
 
-              <button id="commander" type="submit" name="commander">
+              <button id="commander" type="submit" name="commander" action='https://'>
                 Commander
               </button>
             </form>
