--- a/produit.html
+++ b/produit.html
@@ -106,6 +106,8 @@
       <!--Scipt JS-->
       <script src="detail.js"></script>
       <script src="panier.js"></script>
+      <script src="recap.js"></script>
+
       <!--Script FontAwesome-->
       <script src="https://kit.fontawesome.com/ffb09557c8.js" crossorigin="anonymous"></script>
     </div>
