modifications_page_panier_et_confirmation_commande

--- a/panier-orinounours.html
+++ b/panier-orinounours.html
@@ -117,7 +117,7 @@
                 </div>
               </div>
 
-              <button id="commander" type="submit" name="commander" action='https://'>
+              <button id="commander" type="submit" name="commander" >
                 Commander
               </button>
             </form>
@@ -147,6 +147,7 @@
      
       <script src="panier.js"></script>
       <script src="recap.js"></script>
+      <script src="saveorder.js"></script>
       <!--Script FontAwesome-->
       <script src="https://kit.fontawesome.com/ffb09557c8.js" crossorigin="anonymous"></script>
     </div>
