--- a/produit.html
+++ b/produit.html
@@ -73,7 +73,7 @@
         <section id="detailProduit">
           <div id="detailOption">
             <p>Choisissez votre couleur :</p>
-            <select name="option" id="choix_option" required aria-invalid="false" >
+            <select name="option" id="choix_option" aria-required="true" aria-invalid="false" >
               <option  disabled value="defaut" selected>Choisissez votre couleur</option>
             </select>
           </div>
