--- a/panier-orinounours.html
+++ b/panier-orinounours.html
@@ -57,11 +57,7 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="panier-orinounours.html">
-                    <i class="fas fa-shopping-cart fa-1x"></i>Panier (<span
-                      id="indexPanier"
-                    ></span
-                    >)</a
-                  >
+                    <i class="fas fa-shopping-cart fa-1x"></i>Panier </a>
                 </li>
               </ul>
             </div>
@@ -106,10 +102,12 @@
                 <label for="ville"> Ville </label>
                 <input type="text" id="ville" name="ville" class="form-control" placeholder="Ex: Paris" required />
               </div>
-              
+              <div>
+                <a href="">
               <button id="commander" type="submit" name="commander" >
                 Commander
-              </button>
+              </button></a>
+             </div>
             </form>
           </div>
         </section>
