--- a/produit.html
+++ b/produit.html
@@ -57,11 +57,8 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="panier-orinounours.html">
-                    <i class="fas fa-shopping-cart fa-1x"></i>Panier (<span
-                      id="indexPanier"
-                    ></span
-                    >)</a
-                  >
+                    <i class="fas fa-shopping-cart fa-1x"></i>Panier </a>
+                  
                 </li>
               </ul>
             </div>
@@ -79,7 +76,8 @@
           </div>
         </section>
           <div class="button_panier">
-              <div>
+              <div> 
+                
                 <button id="ajout_panier">Ajouter au Panier</button> 
               </div>
           </div>
