--- a/index.html
+++ b/index.html
@@ -56,11 +56,7 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="panier-orinounours.html">
-                    <i class="fas fa-shopping-cart fa-1x"></i>Panier (<span
-                      id="indexPanier"
-                    ></span
-                    >)</a
-                  >
+                    <i class="fas fa-shopping-cart fa-1x"></i>Panier </a>
                 </li>
               </ul>
             </div>
