--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-    <head>
+<html lang="fr">
+      <head>
         <meta charset="utf-8" />
         <title>Ours en peluche artisanaux faits à la main - Orinounours by Orinoco</title>
         <meta name="description" content="Ours en peluche faits à la main de qualité Française."/>
@@ -56,7 +57,7 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="panier-orinounours.html">
-                    <i class="fas fa-shopping-cart fa-1x"></i>Panier </a>
+                    <div class="fas fa-shopping-cart fa-1x"></div>Panier </a>
                 </li>
               </ul>
             </div>
@@ -82,20 +83,22 @@
       </main>
       <footer>
         <div class="footer">
-            <div class="footer1">
-                <a href="index.html" id="accueil">
-                <img class="image_footer"src="css/images/IconeOurs.jpg" alt="Icone Ours"/></a>  
-                <p>Copyright © 2020 Orinounours by Orinoco - Tous droits réservés</p>
-            </div>   
-            <div class="footer2">
-                <ul class="nav-item">
-                <a class="nav-link" href="https://groupe-socom.fr" id="creation">Une Création Groupe Socom</a>
-                </ul>
-                <ul class="nav-item">
-                 <a class="nav-link" href="mentions_legales.html" id="mentions_legales">Mentions Légales</a>
-                </ul>
-            </div>
-        </div>
+          <div class="footer1">
+              <a href="index.html" id="acceuil_footer">
+              <img src="css/images/IconeOurs.jpg" alt="Icone Ours"/></a>  
+              <p>Copyright © 2020 Orinounours by Orinoco - Tous droits réservés</p>
+          </div>   
+          <div class="footer2">
+            <ul class="header-navigation">
+              <li class="nav-item">
+              <a class="nav-link" href="https://groupe-socom.fr" id="creation">Une Création Groupe Socom</a>
+              </li>
+              <li class="nav-item">
+               <a class="nav-link" href="mentions_legales.html" id="mentions_legales">Mentions Légales</a>
+              </li>
+             </ul> 
+          </div>
+      </div>
       </footer>
 
       <!--Scipt JS-->
