--- a/confirmation-orinounours.html
+++ b/confirmation-orinounours.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-    <head>
+    <html lang="fr">
+    <head >
         <meta charset="utf-8" />
         <title>Ours en peluche artisanaux faits à la main - Orinounours by Orinoco</title>
         <meta name="description" content="Ours en peluche faits à la main de qualité Française."/>
@@ -56,7 +57,7 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="panier-orinounours.html">
-                    <i class="fas fa-shopping-cart fa-1x"></i>Panier </a>
+                    <div class="fas fa-shopping-cart fa-1x"></div>Panier </a>
                 </li>
               </ul>
             </div>
@@ -93,7 +94,9 @@
           <div id='total-commande'></div>
 
           <div class="retourAccueil">
+            <div id="bouton_retour_accueil">
             <a href="index.html">Retourner à l'accueil</a>
+            </div>
           </div>
         </section>
       </main>
@@ -101,17 +104,19 @@
       <footer>
         <div class="footer">
             <div class="footer1">
-                <a href="index.html" id="accueil">
+                <a href="index.html" id="acceuil_footer">
                 <img src="css/images/IconeOurs.jpg" alt="Icone Ours"/></a>  
                 <p>Copyright © 2020 Orinounours by Orinoco - Tous droits réservés</p>
             </div>   
             <div class="footer2">
-                <ul class="nav-item">
+              <ul class="header-navigation">
+                <li class="nav-item">
                 <a class="nav-link" href="https://groupe-socom.fr" id="creation">Une Création Groupe Socom</a>
-                </ul>
-                <ul class="nav-item">
+                </li>
+                <li class="nav-item">
                  <a class="nav-link" href="mentions_legales.html" id="mentions_legales">Mentions Légales</a>
-                </ul>
+                </li>
+               </ul> 
             </div>
         </div>
       </footer>
