--- a/panier-orinounours.html
+++ b/panier-orinounours.html
@@ -145,9 +145,9 @@
 
     <!--Scipt JS-->
 
-    <script src="panier.js"></script>
-    <script src="recap.js"></script>
-    <script src="saveorder.js"></script>
+    <script defer src="panier.js"></script>
+    <script defer src="recap.js"></script>
+    <script defer src="saveorder.js"></script>
     <!--Script FontAwesome-->
     <script src="https://kit.fontawesome.com/ffb09557c8.js" crossorigin="anonymous"></script>
   </div>
