--- a/produit.html
+++ b/produit.html
@@ -110,9 +110,9 @@
       </footer>
 
       <!--Scipt JS-->
-      <script src="detail.js"></script>
-      <script src="panier.js"></script>
-      <script src="recap.js"></script>
+      <script defer src="detail.js"></script>
+      <script  defer src="panier.js"></script>
+      
 
       <!--Script FontAwesome-->
       <script src="https://kit.fontawesome.com/ffb09557c8.js" crossorigin="anonymous"></script>
